--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,17 @@
     <link rel="stylesheet" type="text/css" href="contact.css">
 </head>
 <body>
-    <header>
-        <img src="360_F_375387396_wSJM4Zm0kIRoG7Ej8rmkXot9gN69H4u4.png" alt="Site Logo" class="logo">
-        <h1 class="site-name"><a href="index.html" style="text-decoration: none; color: white;">MovieMagic</a></h1>
-        <div >
-        <p class="contact">Contact: info@moviemagic.com<br>Mob: 9998887776</p>
-        </div>
-    </header>
-    
+    <div class="page">
+        <nav>
+            <img src="360_F_375387396_wSJM4Zm0kIRoG7Ej8rmkXot9gN69H4u4.png" alt="Site Logo" class="logo">
+            <div class="nav-center">
+                <h1 class="site-name"><a href="index.html" style="color: rgb(187, 157, 74); text-decoration: none;">MovieMagic</a></h1>
+            </div>
+            <div class="nav-right">
+                <a style="color: rgb(187, 157, 74);">EMail:info@moviemagic.com<br>Mob: 9998887776</a>
+            </div>
+        </nav>
+    </div>
     <div class="container">
         <div>
             <p>
