--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
         </div>
         
         <div class="video">
-            <iframe width="790" height="315" src="https://www.youtube.com/embed/your_video_id" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/8wvZrpJvnvI" title="&quot;100% Quality&quot; Hollywood Movies of 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        </div>
         
         <footer class="footer">
             <p>ALL RIGHTS RESERVED @MovieMagic 2024</p>
